<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <!-- 返回按钮 -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btnBack_description"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_back" />

        <!-- 标题 -->
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/textAddTitle"
            android:textColor="@android:color/white"
            android:textSize="24sp"  />

        <!-- 保存按钮 -->
        <ImageButton
            android:id="@+id/imBtn_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btnSave_description"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_save" />
    </com.google.android.material.appbar.MaterialToolbar>

    <!-- 主内容区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_exam_name"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/editExamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="考试名称"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="16dp"
                android:textColor="?attr/colorPrimary"
                android:textColorHint="#808080"
                android:textCursorDrawable="@drawable/shape_edittext_cursor"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                android:layout_gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="16dp"
                android:textColor="#808080"
                android:gravity="center_vertical"
                android:text="@string/select_date"
                app:backgroundTint="@android:color/transparent"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_time"
                android:layout_gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="16dp"
                android:textColor="#808080"
                android:gravity="center_vertical"
                android:text="@string/select_time"
                app:backgroundTint="@android:color/transparent"
                style="@style/Widget.MaterialComponents.Button.TextButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_is_pinned"
                android:layout_gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnIsPinned"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="16dp"
                android:textColor="#808080"
                android:gravity="center_vertical"
                android:text="是否置顶"
                app:backgroundTint="@android:color/transparent"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

            <Switch
                android:id="@+id/swIsPinned"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:switchMinWidth="52dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_marginTop="64dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="保存"
            android:padding="16dp"
            android:textSize="24dp"/>
    </LinearLayout>

</LinearLayout>