<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <!-- 返回按钮 -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btnBack_description"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_back" />

        <!-- 标题 -->
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:padding="12dp"
            android:text="@string/textTitle"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <!-- 编辑按钮 -->
        <ImageButton
            android:id="@+id/imBtn_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_edit_description"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_edit" />
    </com.google.android.material.appbar.MaterialToolbar>

    <!-- 主内容区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/detail_main_bg"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_exam_name"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="#ffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_days_left"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="8"
            android:background="#FFFFFF"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="200sp" />

        <TextView
            android:id="@+id/tv_exam_target"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="#ffff"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_left_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="36dp"
            android:padding="16dp"
            android:text="编辑考试"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_del"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="36dp"
            android:padding="16dp"
            android:text="删除考试"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>




